_css/manifolds.css
.icon {
    width: 1.25rem;
    margin-right:.5rem;
}
.page-foot {
    text-align: center;
}
div.alert > code {
    background: inherit;
    color: inherit;
    font-family: monospace;
    font-size:1.1rem;
}
.text-to-code {
}

div.tab-pane {
    margin-top: -4px;
    border-color: #dee2e6;
    border:0px;
    border-top: 1px;
}

ul.nav-tabs li.nav-item a.active {
    background: #f8f9fa;
    /* same as code background */
    border-color: #dee2e6 #dee2e6 #f8f9fa;
}

